Add output copy button & copied toast

--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
 		"eslint-plugin-svelte": "^2.35.1",
 		"flowbite": "^2.2.1",
 		"flowbite-svelte": "^0.44.22",
+		"flowbite-svelte-icons": "^1.0.2",
 		"postcss": "^8.4.32",
 		"postcss-load-config": "^5.0.2",
 		"prettier": "^3.1.1",
